# ai-invention-14efe0-resolution-failure-directed-extraction-d

./: README.md
paper_latex/: references.bib
paper_latex/workspace/: .terminal_claude_agent_struct_out.json  paper.aux  paper.bbl  paper.blg  paper.out  paper.tex  render_pages.py
round-1/dataset-1/: README.md
round-1/dataset-1/demo/: data_code_demo.ipynb  mini_demo_data.json
round-1/dataset-1/src/: .terminal_claude_agent_struct_out.json  data.py  mini_data_out.json  preview_full_data_out.json
round-1/experiment-1/: README.md
round-1/experiment-1/demo/: method_code_demo.ipynb  mini_demo_data.json
round-1/experiment-1/src/: .terminal_claude_agent_struct_out.json  method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml  run_log.txt
round-1/research-1/: README.md
round-1/research-1/demo/: research_demo.md
round-1/research-1/src/: .aii_cost_ledger.jsonl  .terminal_claude_agent_struct_out.json  research_out.json
round-2/research-1/: README.md
round-2/research-1/demo/: research_demo.md
round-2/research-1/src/: .aii_cost_ledger.jsonl  .terminal_claude_agent_struct_out.json  research_out.json
