[project]
name = "rfde-experiment"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "certifi==2026.5.20",
    "charset-normalizer==3.4.7",
    "idna==3.18",
    "loguru==0.7.3",
    "numpy==2.4.6",
    "rank-bm25==0.2.2",
    "requests==2.34.2",
    "scipy==1.17.1",
    "urllib3==2.7.0",
]
